--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Todos</h1>
+    <ul id="ulist">
+
+    </ul>
+    <input type="text" id="input">
+    <button id="add">Add todo</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts.js"></script>
 </body>
