--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Noto+Sans+JP&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <h1>Todos</h1>
+    <div class="input">
+        <input type="text" id="inputbox">
+        <button id="add">Add</button>
+    </div>
     <ul id="ulist">
 
     </ul>
-    <input type="text" id="input">
-    <button id="add">Add todo</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts.js"></script>
 </body>
