--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Todos</h1>
-    <div class="input">
+    <div id="input">
         <input type="text" id="inputbox">
         <button id="add">Add</button>
     </div>
